--- a/automation/taskcluster/androidTest/flank-x86.yml
+++ b/automation/taskcluster/androidTest/flank-x86.yml
@@ -38,12 +38,12 @@ gcloud:
   performance-metrics: true
 
   test-targets:
-   - package org.mozilla.fenix.ui
-   - package org.mozilla.fenix.glean
+   - package org.mozilla.fenix.ui.NoNetworkAccessStartupTests#noNetworkConnectionStartupTest
+   #- package org.mozilla.fenix.glean
 
   device:
    - model: Pixel2
-     version: 28
+     version: 29
 
 flank:
   project: GOOGLE_PROJECT
